apps/surrealdb/overlays/home/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: surrealdb
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
      sectionName: surrealdb-dev-https
  hostnames:
    - surrealdb-dev.workrave.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: surrealdb
          port: 8000
